bases/calibre/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  annotations:
    mimikyu.reynn.net/resource-profiile: small
spec:
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      labels:
        app: calibre
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: k3s.io/hostname
                    operator: In
                    values:
                      - mimikyu
      containers:
        - name: calibre
          image: linuxserver/calibre-web
          resources: {}
          ports:
            - containerPort: 8083
              name: tcp-http
          volumeMounts:
            - mountPath: /config
              name: data
            - mountPath: /media/deadpool
              name: media
      volumes:
        - name: media
          hostPath:
            path: /media/deadpool/
            type: Directory
        - name: data
          hostPath:
            path: /media/deadpool/docker/media-server/calibre
            type: DirectoryOrCreate
