bases/calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
spec:
  selector:
    app: calibre
  ports:
    - name: tcp
      port: 8083
